<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/LogoKia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kia" />

    <EditText
        android:id="@+id/txt_celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_phone_iphone_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/txt_Celular"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_emailRegistro" />

    <EditText
        android:id="@+id/txt_cedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_credit_card_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/txt_Cedula"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/txt_passRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/txt_passwordR"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_celular" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="365dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="32dp"
        android:gravity="center|center_vertical"
        android:text="@string/txt_Diligenciesusdatos"
        android:textSize="20sp"
        android:textStyle="normal|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/txt_emailRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/txt_EmailR"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cedula" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="348dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="32dp"
        android:gravity="center|center_vertical"
        android:text="@string/txt_Bitacora"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="218dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_passRegistro">

        <Button
            android:id="@+id/btn_RealizarRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FB1902"
            android:onClick="Guardar"
            android:text="@string/btn_GuardarC"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_RealizarRegistro2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FB1902"
            android:onClick="Consultar"
            android:text="@string/btn_ConsultarC"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_RealizarRegistro3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FB1902"
            android:onClick="Editar"
            android:text="@string/btn_EditarC"
            android:textColor="#000000"
            tools:ignore="@string/btn_EditarC,TextContrastCheck" />

        <Button
            android:id="@+id/btn_RealizarRegistro4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FB1902"
            android:onClick="Eliminar"
            android:text="@string/btn_EliminarC"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>